add crud de school e class